--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 </head>
 <body>
     <h1>Crystals Collector!</h1>
+    <div class = "instructions">
+        <p>You will be given a random number at the start of the game.</p>
+        <br>
+        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
+        <br>
+        <p>You win the game by matching your total score to random number, you lose the game if your total score goes above the rando number.</p>
+        <br>
+        <p>The value of each crystal is hidden fro you until you click on it.</p>
+        <br>
+        <p>Each time when the game starts, the game will change the value of each crystal.</p>
+    </div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
