--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <br>
         <p>Each time when the game starts, the game will change the value of each crystal.</p>
     </div>
+    <div class="scoreFloat">
+        <div class="randomNumber">
+
+        </div>
+        <div class="score">
+           <p class="wins"></p>
+           <p class="losses"></p>
+           
+        </div>
+    </div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
