--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
            
         </div>
     </div>
+    <div class="gems">
+        <img src="assets/images/purple.jpeg">
+        <img src="assets/images/red.jpg">
+        <img src="assets/images/ruby.jpg">
+        <img src="assets/images/yellow.jpg">
+    </div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
