making the page layout.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p>The value of each crystal is hidden fro you until you click on it.</p>
         <br>
         <p>Each time when the game starts, the game will change the value of each crystal.</p>
+        <br>
     </div>
     <div class="scoreFloat">
         <div class="randomNumber">
@@ -37,6 +38,7 @@
         <img src="assets/images/ruby.jpg">
         <img src="assets/images/yellow.jpg">
     </div>
+    <div class="scoreDisplay">Your total score is:</div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
