making the page layout.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <img src="assets/images/yellow.jpg">
     </div>
     <div class="scoreDisplay">Your total score is:</div>
+    <div class="totalScore"></div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
