created different a random numbers between 1-12 for gems.

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
     </div>
     <div class="gems">
-        <img src="assets/images/purple.jpeg">
-        <img src="assets/images/red.jpg">
-        <img src="assets/images/ruby.jpg">
-        <img src="assets/images/yellow.jpg">
+        <img src="assets/images/purple.jpeg" id="image1">
+        <img src="assets/images/red.jpg" id="image2">
+        <img src="assets/images/ruby.jpg" id="image3">
+        <img src="assets/images/yellow.jpg" id="image4">
     </div>
     <div class="scoreDisplay">Your total score is:</div>
     <div class="totalScore"></div>
