adding the gems to get the score.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
         </div>
         <div class="score">
-           <p class="wins"></p>
-           <p class="losses"></p>
+           <p class="wins">Wins: 0</p>
+           <br>
+           <p class="losses">Losses: 0</p>
            
         </div>
     </div>
@@ -39,8 +40,8 @@
         <img src="assets/images/ruby.jpg" id="image3">
         <img src="assets/images/yellow.jpg" id="image4">
     </div>
-    <div class="scoreDisplay">Your total score is:</div>
-    <div class="totalScore"></div>
+    <div class="totalScore">Your total score is:</div>
+    <div class="scoreCounter"> 0</div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
