added game statusmessage .

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         </div>
         <div class="score">
+            <p class="status"></p>
            <p class="wins">Wins: 0</p>
-           <br>
            <p class="losses">Losses: 0</p>
            
         </div>
